--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.7.76",
     "react": "^18.3.1",
